# bayesian-materials-science-benchmarking

./: .gitignore  README.md  pyproject.toml
bayesian_materials_science_benchmarking/: config.py  data_utils.py  main.py  model_utils.py  perf_utils.py  perf_viz.ipynb  plot_utils.py  sm_utils.py  train_utils.py
