[tool.poetry]
name = "bayesian-materials-science-benchmarking"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "bayesian_materials_science_benchmarking"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.1"
torch = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
