[tool.poetry]
name = "bayesian-materials-science-benchmarking"
version = "0.1.0"
description = ""
authors = ["Hud Wahab <hud@multimodeai.com>"]
readme = "README.md"
packages = [{include = "bayesian_materials_science_benchmarking"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.1"
torch = "^1.13.1"
matplotlib = "^3.6.2"
pandas = "^1.5.2"
seaborn = "^0.12.1"
GPy = "^1.10.0"
scikit-learn = "^1.2.0"
pyDOE = "^0.3.8"
scipy = "^1.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
